k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spheroseg-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spheroseg
spec:
  hosts:
  - "*"
  gateways:
  - spheroseg-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: spheroseg-backend
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spheroseg-frontend
        port:
          number: 80
